--- a/src/assets/styles/mixin.scss
+++ b/src/assets/styles/mixin.scss
@@ -28,3 +28,42 @@
             display: none;
     }
 }
+
+@mixin headBorder{
+    .n-card :deep(.n-card-header) {
+        border-bottom: 1px solid #f2f2f2;
+    }
+}
+
+@mixin loading{
+    .loading {
+        width: 100%;
+        text-align: center;
+        color: #7d8791;
+        position: relative;
+        bottom: 25px;
+        float: left;
+        z-index: 100;
+
+        .videos {
+            display: inline-block;
+            height: 52px;
+            overflow: hidden;
+            position: absolute;
+            bottom: -20px;
+            left: 39%;
+
+            video {
+                width: 100px;
+                height: 80px;
+            }
+        }
+
+        .text {
+            position: absolute;
+            bottom: -22px;
+            left: 48%;
+            z-index: 999;
+        }
+    }
+}
