The comments module is largely complete

--- a/src/assets/styles/mixin.scss
+++ b/src/assets/styles/mixin.scss
@@ -67,3 +67,14 @@
         }
     }
 }
+
+@mixin overlay{
+    .overlay {
+        position: fixed; /* 固定定位 */
+        top: 0;
+        left: 0;
+        @include all;
+        background-color: rgba(0, 0, 0, 0.5); /* 半透明黑色 */
+        z-index: 998; /* 确保在最上层 */
+    }
+}
